--- a/css/style.css
+++ b/css/style.css
@@ -47,14 +47,14 @@ main {
   padding: 1rem;
 }
 
-.navbar-colour {
+/* .navbar-colour {
   --bs-white: #fff;
-}
+} */
 
-.navbar-nav {
+/* .navbar-nav {
   justify-content: center;
   margin: auto;
-}
+} */
 
 .nav-link {
   font-size: 1.5rem;
@@ -81,13 +81,14 @@ main {
   height: 2.2rem;
 }
 
-.navbar-toggler {
+/* .navbar-toggler {
   height: 2.5rem;
-}
+  margin-left: auto;
+} */
 
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
   color: blue;
-}
+} */
 
 .bi-person {
   font-size: 2.2rem;
@@ -95,14 +96,14 @@ main {
   padding-right: 1rem;
 }
 
-.container-fluid {
+/* .container-fluid {
   height: 3rem;
-}
+} */
 
-.nav-elements {
+/* .nav-elements {
   display: flex;
-  align-items: center;
-}
+  justify-content: flex-end;
+} */
 
 .register-link {
   display: flex;
